--- a/ClientApp/src/app/administrativo/pages/registrar-paciente/registrar-paciente.component.css
+++ b/ClientApp/src/app/administrativo/pages/registrar-paciente/registrar-paciente.component.css
@@ -92,3 +92,21 @@
     font-size: 14px;
   }
 }
+/* Estilo para notificaciones */
+.notification {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  padding: 15px;
+  border-radius: 5px;
+  background-color: #28a745; /* Verde para éxito */
+  color: #fff;
+  font-size: 16px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  transition: opacity 0.5s ease-in-out;
+  opacity: 1;
+}
+
+.notification.hidden {
+  opacity: 0;
+}
