--- a/ClientApp/src/app/shared/pacientes/pacientes.component.html
+++ b/ClientApp/src/app/shared/pacientes/pacientes.component.html
@@ -7,12 +7,12 @@
     <app-search-box [searchOptions]="[
       { label: 'DNI', value: 'nombreRol' },
       { label: 'ID', value: 'id' }
-    ]" [defaultSearchType]="'nombreRol'" placeholder="Escribe para buscar..." (search)="filtrarRoles($event)">
-  </app-search-box>
+    ]" [defaultSearchType]="'nombreRol'" placeholder="Escribe para buscar..." (search)="filtrarPacientes()">
+    </app-search-box>
 
 
     <button (click)="toggleFormularioAgregar()" class="btn-agregar">
-    Agregar Paciente
+      Agregar Paciente
     </button>
   </div>
 
@@ -21,13 +21,20 @@
     <table class="table">
       <thead>
         <tr>
-          <th (click)="ordenar('IdPaciente')">ID Paciente <span *ngIf="columnaOrdenada === 'IdPaciente'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
-          <th (click)="ordenar('Nombre')">Nombre <span *ngIf="columnaOrdenada === 'Nombre'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
-          <th (click)="ordenar('Dni')">Dni <span *ngIf="columnaOrdenada === 'Dni'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
-          <th (click)="ordenar('FechaNacimiento')">Fecha de Nacimiento <span *ngIf="columnaOrdenada === 'FechaNacimiento'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
-          <th (click)="ordenar('Estado')">Estado <span *ngIf="columnaOrdenada === 'Estado'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
-          <th (click)="ordenar('FechaRegistro')">Fecha de Registro <span *ngIf="columnaOrdenada === 'FechaRegistro'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
-          <th (click)="ordenar('SeguridadSocial')">Seguridad Social <span *ngIf="columnaOrdenada === 'SeguridadSocial'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
+          <th (click)="ordenar('IdPaciente')">ID Paciente <span *ngIf="columnaOrdenada === 'IdPaciente'">{{ orden ===
+              'asc' ? '▲' : '▼' }}</span></th>
+          <th (click)="ordenar('Nombre')">Nombre <span *ngIf="columnaOrdenada === 'Nombre'">{{ orden === 'asc' ? '▲' :
+              '▼' }}</span></th>
+          <th (click)="ordenar('Dni')">Dni <span *ngIf="columnaOrdenada === 'Dni'">{{ orden === 'asc' ? '▲' : '▼'
+              }}</span></th>
+          <th (click)="ordenar('FechaNacimiento')">Fecha de Nacimiento <span
+              *ngIf="columnaOrdenada === 'FechaNacimiento'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
+          <th (click)="ordenar('Estado')">Estado <span *ngIf="columnaOrdenada === 'Estado'">{{ orden === 'asc' ? '▲' :
+              '▼' }}</span></th>
+          <th (click)="ordenar('FechaRegistro')">Fecha de Registro <span *ngIf="columnaOrdenada === 'FechaRegistro'">{{
+              orden === 'asc' ? '▲' : '▼' }}</span></th>
+          <th (click)="ordenar('SeguridadSocial')">Seguridad Social <span
+              *ngIf="columnaOrdenada === 'SeguridadSocial'">{{ orden === 'asc' ? '▲' : '▼' }}</span></th>
           <th>Acciones</th>
         </tr>
       </thead>
@@ -106,85 +113,89 @@
 
 
   <!-- Navegación de Paginación -->
-<div class="paginacion">
-  <button (click)="irAPrimeraPagina()" [disabled]="paginaActual === 1">Primera</button>
-  <button (click)="paginaAnterior()" [disabled]="paginaActual === 1">Anterior</button>
+  <div class="paginacion">
+    <button (click)="irAPrimeraPagina()" [disabled]="paginaActual === 1">Primera</button>
+    <button (click)="paginaAnterior()" [disabled]="paginaActual === 1">Anterior</button>
 
-  <!-- Mostrar la página actual y el total de páginas -->
-  <span>Página {{ paginaActual }} de {{ totalPaginas }}</span>
+    <!-- Mostrar la página actual y el total de páginas -->
+    <span>Página {{ paginaActual }} de {{ totalPaginas }}</span>
 
-  <button (click)="paginaSiguiente()" [disabled]="paginaActual === totalPaginas">Siguiente</button>
-  <button (click)="irALaUltimaPagina()" [disabled]="paginaActual === totalPaginas">Última</button>
-</div>
+    <button (click)="paginaSiguiente()" [disabled]="paginaActual === totalPaginas">Siguiente</button>
+    <button (click)="irALaUltimaPagina()" [disabled]="paginaActual === totalPaginas">Última</button>
+  </div>
 
- <!-- Formulario de actualización paciente modal -->
-<div class="modal" *ngIf="mostrarFormularioActualizar">
-  <div class="modal-content">
-    <span class="close" (click)="toggleActualizarPaciente(pacienteParaActualizar!)">&times;</span>
-    <h3>Actualizar Paciente</h3>
+  <!-- Formulario de actualización paciente modal -->
+  <div class="modal" *ngIf="mostrarFormularioActualizar">
+    <div class="modal-content">
+      <span class="close" (click)="toggleActualizarPaciente(pacienteParaActualizar!)">&times;</span>
+      <h3>Actualizar Paciente</h3>
 
-<form (ngSubmit)="actualizarPaciente()" class="update-form">
-  <div class="form-container">
-    <div class="form-column">
-      <div class="form-group">
-        <label for="idPaciente">ID Paciente:</label>
-        <input type="number" id="idPaciente" [(ngModel)]="pacienteParaActualizar!.IdPaciente" name="idPaciente" disabled>
-      </div>
+      <form (ngSubmit)="actualizarPaciente()" class="update-form">
+        <div class="form-container">
+          <div class="form-column">
+            <div class="form-group">
+              <label for="idPaciente">ID Paciente:</label>
+              <input type="number" id="idPaciente" [(ngModel)]="pacienteParaActualizar!.IdPaciente" name="idPaciente"
+                disabled>
+            </div>
 
-      <div class="form-group">
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" [(ngModel)]="pacienteParaActualizar!.Nombre" name="nombre">
-      </div>
+            <div class="form-group">
+              <label for="nombre">Nombre:</label>
+              <input type="text" id="nombre" [(ngModel)]="pacienteParaActualizar!.Nombre" name="nombre">
+            </div>
 
-      <div class="form-group">
-        <label for="edad">DNI:</label>
-        <input type="text" id="dni" [(ngModel)]="pacienteParaActualizar!.Dni" name="dni">
-      </div>
+            <div class="form-group">
+              <label for="edad">DNI:</label>
+              <input type="text" id="dni" [(ngModel)]="pacienteParaActualizar!.Dni" name="dni">
+            </div>
 
-      <div class="form-group">
-        <label for="fechaNacimiento">Fecha de Nacimiento:</label>
-        <input type="date" id="fechaNacimiento" [(ngModel)]="pacienteParaActualizar!.FechaNacimiento" name="fechaNacimiento">
-      </div>
+            <div class="form-group">
+              <label for="fechaNacimiento">Fecha de Nacimiento:</label>
+              <input type="date" id="fechaNacimiento" [(ngModel)]="pacienteParaActualizar!.FechaNacimiento"
+                name="fechaNacimiento">
+            </div>
 
-      <div class="form-group">
-        <label for="estado">Estado:</label>
-        <input type="text" id="estado" [(ngModel)]="pacienteParaActualizar!.Estado" name="estado">
-      </div>
-    </div>
+            <div class="form-group">
+              <label for="estado">Estado:</label>
+              <input type="text" id="estado" [(ngModel)]="pacienteParaActualizar!.Estado" name="estado">
+            </div>
+          </div>
 
-    <div class="form-column">
-      <div class="form-group">
-        <label for="seguridadSocial">Seguridad Social:</label>
-        <input type="text" id="seguridadSocial" [(ngModel)]="pacienteParaActualizar!.SeguridadSocial" name="seguridadSocial">
-      </div>
+          <div class="form-column">
+            <div class="form-group">
+              <label for="seguridadSocial">Seguridad Social:</label>
+              <input type="text" id="seguridadSocial" [(ngModel)]="pacienteParaActualizar!.SeguridadSocial"
+                name="seguridadSocial">
+            </div>
 
-      <div class="form-group">
-        <label for="direccion">Dirección:</label>
-        <input type="text" id="direccion" [(ngModel)]="pacienteParaActualizar!.Direccion" name="direccion">
-      </div>
+            <div class="form-group">
+              <label for="direccion">Dirección:</label>
+              <input type="text" id="direccion" [(ngModel)]="pacienteParaActualizar!.Direccion" name="direccion">
+            </div>
 
-      <div class="form-group">
-        <label for="telefono">Teléfono:</label>
-        <input type="text" id="telefono" [(ngModel)]="pacienteParaActualizar!.Telefono" name="telefono">
-      </div>
+            <div class="form-group">
+              <label for="telefono">Teléfono:</label>
+              <input type="text" id="telefono" [(ngModel)]="pacienteParaActualizar!.Telefono" name="telefono">
+            </div>
 
-      <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" id="email" [(ngModel)]="pacienteParaActualizar!.Email" name="email">
-      </div>
+            <div class="form-group">
+              <label for="email">Email:</label>
+              <input type="email" id="email" [(ngModel)]="pacienteParaActualizar!.Email" name="email">
+            </div>
 
-      <div class="form-group">
-        <label for="historialMedico">Historial Médico:</label>
-        <input type="text" id="historialMedico" [(ngModel)]="pacienteParaActualizar!.HistorialMedico" name="historialMedico">
-      </div>
+            <div class="form-group">
+              <label for="historialMedico">Historial Médico:</label>
+              <input type="text" id="historialMedico" [(ngModel)]="pacienteParaActualizar!.HistorialMedico"
+                name="historialMedico">
+            </div>
+          </div>
+        </div>
+        <button type="submit" class="submit-btn">Guardar</button>
+
+
+      </form>
     </div>
   </div>
-  <button type="submit" class="submit-btn">Guardar</button>
-
-
-    </form>
-  </div>
-</div>
 
   <!-- Formulario de agregar paciente desplegable -->
   <div class="modal" *ngIf="mostrarFormularioAgregar">
@@ -196,51 +207,68 @@
           <div class="form-column">
             <div class="form-group">
               <label for="nombre">Nombre*</label>
-              <input type="text" id="nombre" [(ngModel)]="nuevoPaciente.Nombre" name="Nombre" required placeholder="Nombre del paciente" />
-              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['Nombre']?.invalid" class="error-message">El nombre es requerido.</div>
+              <input type="text" id="nombre" [(ngModel)]="nuevoPaciente.Nombre" name="Nombre" required
+                placeholder="Nombre del paciente" />
+              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['Nombre']?.invalid" class="error-message">El
+                nombre es requerido.</div>
             </div>
 
             <div class="form-group">
               <label for="edad">DNI*</label>
-              <input type="text" id="dni" [(ngModel)]="nuevoPaciente.Dni" name="Dni" required placeholder="DNI del paciente" min="0" />
-              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['Dni']?.invalid" class="error-message">Por favor, ingresa una edad válida.</div>
+              <input type="text" id="dni" [(ngModel)]="nuevoPaciente.Dni" name="Dni" required
+                placeholder="DNI del paciente" min="0" />
+              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['Dni']?.invalid" class="error-message">Por
+                favor, ingresa una edad válida.</div>
             </div>
 
             <div class="form-group">
               <label for="fecha-nacimiento">Fecha de Nacimiento*</label>
-              <input type="date" id="fecha-nacimiento" [(ngModel)]="nuevoPaciente.FechaNacimiento" name="FechaNacimiento" required />
-              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['FechaNacimiento']?.invalid" class="error-message">La fecha de nacimiento es requerida.</div>
+              <input type="date" id="fecha-nacimiento" [(ngModel)]="nuevoPaciente.FechaNacimiento"
+                name="FechaNacimiento" required />
+              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['FechaNacimiento']?.invalid"
+                class="error-message">La fecha de nacimiento es requerida.</div>
             </div>
 
             <div class="form-group">
               <label for="seguridad-social">Número de Seguridad Social*</label>
-              <input type="text" id="seguridad-social" [(ngModel)]="nuevoPaciente.SeguridadSocial" name="SeguridadSocial" required minlength="12" maxlength="12" placeholder="Número de Seguridad Social" />
-              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['SeguridadSocial']?.invalid" class="error-message">El número de seguridad social debe tener 12 dígitos.</div>
+              <input type="text" id="seguridad-social" [(ngModel)]="nuevoPaciente.SeguridadSocial"
+                name="SeguridadSocial" required minlength="12" maxlength="12"
+                placeholder="Número de Seguridad Social" />
+              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['SeguridadSocial']?.invalid"
+                class="error-message">El número de seguridad social debe tener 12 dígitos.</div>
             </div>
           </div>
           <div class="form-column">
             <div class="form-group">
               <label for="direccion">Dirección</label>
-              <input type="text" id="direccion" [(ngModel)]="nuevoPaciente.Direccion" name="Direccion" required placeholder="Dirección del paciente" />
-              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['Direccion']?.invalid" class="error-message">La dirección es requerida.</div>
+              <input type="text" id="direccion" [(ngModel)]="nuevoPaciente.Direccion" name="Direccion" required
+                placeholder="Dirección del paciente" />
+              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['Direccion']?.invalid" class="error-message">
+                La dirección es requerida.</div>
             </div>
 
             <div class="form-group">
               <label for="telefono">Teléfono</label>
-              <input type="text" id="telefono" [(ngModel)]="nuevoPaciente.Telefono" name="Telefono" required placeholder="Teléfono de contacto" />
-              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['Telefono']?.invalid" class="error-message">El teléfono es requerido.</div>
+              <input type="text" id="telefono" [(ngModel)]="nuevoPaciente.Telefono" name="Telefono" required
+                placeholder="Teléfono de contacto" />
+              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['Telefono']?.invalid" class="error-message">El
+                teléfono es requerido.</div>
             </div>
 
             <div class="form-group">
               <label for="email">Email</label>
-              <input type="email" id="email" [(ngModel)]="nuevoPaciente.Email" name="Email" required placeholder="Correo electrónico" />
-              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['Email']?.invalid" class="error-message">El correo electrónico es inválido.</div>
+              <input type="email" id="email" [(ngModel)]="nuevoPaciente.Email" name="Email" required
+                placeholder="Correo electrónico" />
+              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['Email']?.invalid" class="error-message">El
+                correo electrónico es inválido.</div>
             </div>
 
             <div class="form-group">
               <label for="historial-medico">Historial Médico</label>
-              <textarea id="historial-medico" [(ngModel)]="nuevoPaciente.HistorialMedico" name="HistorialMedico" required placeholder="Historial médico del paciente"></textarea>
-              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['HistorialMedico']?.invalid" class="error-message">El historial médico es requerido.</div>
+              <textarea id="historial-medico" [(ngModel)]="nuevoPaciente.HistorialMedico" name="HistorialMedico"
+                required placeholder="Historial médico del paciente"></textarea>
+              <div *ngIf="pacienteForm.submitted && pacienteForm.controls['HistorialMedico']?.invalid"
+                class="error-message">El historial médico es requerido.</div>
             </div>
           </div>
         </div>
