--- a/ClientApp/src/app/shared/habitaciones/habitaciones.component.html
+++ b/ClientApp/src/app/shared/habitaciones/habitaciones.component.html
@@ -24,7 +24,7 @@
           <td colspan="4">
             <div class="form-container">
               <h3>Actualizar Habitación</h3>
-              <form (ngSubmit)="actualizarHabitacion()">
+              <form class = "formulari" (ngSubmit)="actualizarHabitacion()">
                 <label for="edificio">Edificio:</label>
                 <input type="text" id="edificio" [(ngModel)]="habitacionParaActualizar.Edificio" name="edificio">
                 <label for="planta">Planta:</label>
