--- a/ClientApp/src/app/shared/roles/roles.component.html
+++ b/ClientApp/src/app/shared/roles/roles.component.html
@@ -1,17 +1,12 @@
 <div class="roles-section">
   <h2>Roles</h2>
-
-  <app-search-box
-    [searchOptions]="[
+ 
+  <app-search-box [searchOptions]="[
       { label: 'Nombre', value: 'nombreRol' },
       { label: 'ID', value: 'id' }
-    ]"
-    [defaultSearchType]="'nombreRol'"
-    placeholder="Escribe para buscar..."
-    (search)="filtrarRoles($event)"
-  >
+    ]" [defaultSearchType]="'nombreRol'" placeholder="Escribe para buscar..." (search)="filtrarRoles($event)">
   </app-search-box>
-
+ 
   <div class="table-container">
     <table class="table">
       <thead>
@@ -33,40 +28,34 @@
       </tbody>
     </table>
   </div>
-
+ 
   <!-- Formulario de Actualización -->
   <div class="form-container" *ngIf="rolParaActualizar">
     <h3>Actualizar Rol</h3>
     <form [formGroup]="actualizarRolForm" (ngSubmit)="actualizarRol()">
       <label for="idRol">ID Rol:</label>
       <input type="number" id="idRol" formControlName="IdRol" IdRol.disabled />
-
+ 
       <label for="nombreRol">Nombre Rol:</label>
       <input type="text" id="nombreRol" formControlName="NombreRol" />
-
+ 
       <!-- Mensajes de error de actualización -->
-      <div
-        *ngIf="
+      <div *ngIf="
           actualizarRolForm.get('NombreRol')?.invalid &&
           (actualizarRolForm.get('NombreRol')?.touched ||
             actualizarRolForm.get('NombreRol')?.dirty)
-        "
-      >
+        ">
         <!-- Mostrar error si el campo está vacío o solo tiene espacios en blanco -->
-        <span
-          *ngIf="actualizarRolForm.get('NombreRol')?.errors?.['whitespace']"
-        >
+        <span *ngIf="actualizarRolForm.get('NombreRol')?.errors?.['whitespace']">
           El campo no puede estar vacío o contener solo espacios.
         </span>
-
+ 
         <!-- Mostrar error si el rol ya existe -->
-        <span
-          *ngIf="actualizarRolForm.get('NombreRol')?.errors?.['nombreRolExiste']"
-        >
+        <span *ngIf="actualizarRolForm.get('NombreRol')?.errors?.['asyncFieldExisting']">
           Este rol ya existe.
         </span>
       </div>
-
+ 
       <div class="botones">
         <button type="submit" [disabled]="actualizarRolForm.invalid">
           Guardar
@@ -75,35 +64,31 @@
       </div>
     </form>
   </div>
-
+ 
   <!-- Formulario de Agregar -->
   <div class="form-container">
     <h3>Agregar Rol</h3>
     <form [formGroup]="agregarRolForm" (ngSubmit)="agregarRol()">
       <label for="nombreRol">Nombre Rol:</label>
       <input type="text" id="nombreRol" formControlName="NombreRol" />
-
+ 
       <!-- Mensajes de error de agregar -->
-      <div
-        *ngIf="
+      <div *ngIf="
           agregarRolForm.get('NombreRol')?.invalid &&
           (agregarRolForm.get('NombreRol')?.touched ||
             agregarRolForm.get('NombreRol')?.dirty)
-        "
-      >
+        ">
         <!-- Mostrar error si el campo está vacío o solo tiene espacios en blanco -->
         <span *ngIf="agregarRolForm.get('NombreRol')?.errors?.['whitespace']">
           El campo no puede estar vacío o contener solo espacios.
         </span>
-
+ 
         <!-- Mostrar error si el rol ya existe -->
-        <span
-          *ngIf="agregarRolForm.get('NombreRol')?.errors?.['nombreRolExiste']"
-        >
-          Este rol ya existe.
-        </span>
+        <span *ngIf="
+            agregarRolForm.get('NombreRol')?.hasError('asyncFieldExisting')
+          ">El rol ya existe</span>
       </div>
-
+ 
       <div class="botones">
         <button type="submit">Agregar</button>
         <button type="button" (click)="descartarCambios('agregar')">
@@ -113,3 +98,4 @@
     </form>
   </div>
 </div>
+ 
