fixing update users

--- a/ClientApp/src/app/shared/usuarios/usuarios.component.html
+++ b/ClientApp/src/app/shared/usuarios/usuarios.component.html
@@ -114,7 +114,7 @@
     </form>
   </div>
 
-  <div class="form-container">
+  <div class="form-container" *ngIf="!usuarioParaActualizar">
     <h3>Agregar Usuario</h3>
     <form [formGroup]="usuarioForm" (ngSubmit)="agregarUsuario()">
       <label for="nombre">Nombre completo:</label>
