--- a/ClientApp/src/app/shared/historial-altas/historial-altas.component.css
+++ b/ClientApp/src/app/shared/historial-altas/historial-altas.component.css
@@ -196,6 +196,7 @@ span {
   cursor: pointer;
   font-size: 16px;
   transition: background-color 0.3s ease;
+  margin-top: 10px;
 }
 
 
@@ -249,6 +250,7 @@ span {
   .table td {
     font-size: 12px;
   }
+
 
   .form-container button {
     font-size: 14px;
