adding validator if patient exists and getPacienteById endpoint

--- a/ClientApp/src/app/shared/historial-altas/historial-altas.component.html
+++ b/ClientApp/src/app/shared/historial-altas/historial-altas.component.html
@@ -94,7 +94,7 @@
       @if ((historialAltaForm.get("IdPaciente")?.hasError("required")) && historialAltaForm.get("IdPaciente")?.touched) {
         <span class="error"> El Id de paciente es obligatorio.</span>
       }
-      @if (historialAltaForm.get("IdPaciente")?.hasError("patientIdNotFound")) {
+      @if (historialAltaForm.get("IdPaciente")?.hasError("patientIdNotFound") && historialAltaForm.get("IdPaciente")?.touched) {
         <span class="error"> El Id de paciente no existe.</span>
       }
       <div class="label-container"><label for="fechaAlta">Fecha alta </label><span class="required">*</span></div>
