--- a/ClientApp/src/app/shared/search-box/search-box.component.html
+++ b/ClientApp/src/app/shared/search-box/search-box.component.html
@@ -7,12 +7,7 @@
         </option>
       </select>
 
-      <input
-        type="text"
-        formControlName="searchTerm"
-        [placeholder]="placeholder"
-        (input)="onSearch()"
-      />
+      <input type="text" formControlName="searchTerm" [placeholder]="placeholder" (input)="onSearch()" />
     </div>
   </form>
 </div>
