--- a/ClientApp/src/app/shared/ingresos/ingresos.component.css
+++ b/ClientApp/src/app/shared/ingresos/ingresos.component.css
@@ -147,4 +147,9 @@
     color: #d9534f;
     font-size: 12px;
   }
+
+  button[type="submit"]:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+  }
   
